2006-02-01  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java
	(insertParagraph): Cleaned up code.
	(insertFirstContentTag): Fixed call to recreateLeaves.
	(insertContentTag): Added check to code to determine where
	content should be inserted with respect to next element.
	(createFracture): Removed check, recreateLeaves is called in 
	other places when needed.
	(recreateLeaves): Added new parameter for paragraph instead
	of checking the stack. Removed editing for newBranch, replaced
	with a replace call.

2006-02-01  Anthony Balkissoon  <abalkiss@redhat.com>

	* doc/unicode/Blocks-4.0.0.txt: New file.
	* java/lang/Character.java: Regenerated inner class UnicodeBlock from 
	scripts/unicode-blocks.pl and doc/unicode/Blocks-4.0.0.txt.
	* scripts/unicode-blocks.pl: Copied this over from the generics branch
	but replaced some 1.5-only features (such as enum).

2006-01-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/PasswordView.java
	(drawSelectedText): Use drawEchoCharacter() method to draw echo
	character.
	(drawUnselectedText): Use drawEchoCharacter() method to draw echo
	character.

2006-01-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTextField.java
	(getPreferredSize): Also include textfield's insets in width
	calculation.

2006-01-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTextUI.java
	(getPreferredSize): Include the textcomponent's insets in
	preferredSize.

2006-01-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/table/DefaultTableCellRenderer.java
	(getTableCellRendererComponent): Moved setting of the value into
	setValue(). Removed (bogus) special handling of JTextField values.
	(setValue): Made ?: statement more clear by rewriting it
	with if .. else.

2006-01-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JLayeredPane.java
	(insertIndexForLayer): Fixed algorithm to correctly determine
	inser index for positions >= 0.
	(addImpl): Fixed API docs for the index parameter.
